--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,10 +1,12 @@
-<div>
+<div> 
     <app-header></app-header>
-    <div class="container">
-        <div class="card">
-            <router-outlet></router-outlet>
+    <div class="preloader" *ngIf="loading">
+        <div class="loader">
+            <div class="loader__figure"></div>
+            <p class="loader__label">Book Directory</p>
         </div>
     </div>
+    <router-outlet></router-outlet>
 </div>
 
 
