--- a/src/app/pages/book-search/book-search.component.html
+++ b/src/app/pages/book-search/book-search.component.html
@@ -1,2 +1,22 @@
-<p>book-search works!</p>
-<app-book-list></app-book-list>
+<!-- <app-header (buildUrlFilters)="loadRecords($event)"></app-header> -->
+<div class="container">
+    <div class="mb-5">
+        <app-search (buildUrlFilters)="loadRecords($event)"></app-search>
+    </div>
+    <div class="preloader" *ngIf="loading">
+        <div class="loader">
+            <div class="loader__figure">
+            </div>
+        </div>
+    </div>
+    <app-book-list [bookList]="bookList" *ngIf="!loading && bookList.length > 0"></app-book-list>
+    <div class="d-flex justify-content-center top" >
+        <div class="spinner-border spin" role="status" *ngIf="loadingRecords">
+        </div>
+    </div>
+    <div class="loader" *ngIf="!loading && bookList.length == 0">
+        <h3>
+            <p class="loader__label">No Data Found.</p>
+        </h3>
+    </div>
+</div>
