--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,8 +1,17 @@
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-expand-lg nav mb-5">
     <div class="container-fluid">
-        <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+      <a class="navbar-brand menu " [routerLink]="['/bookdirectory/home']" routerLinkActive="router-link-active" >
+        <img src="../../../assets/logo2.png"> 
+      </a>
+      <div class=" navbar-collapse " id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item menu">
+            <a class="nav-link menu" aria-current="page" [routerLink]="['/bookdirectory/home']" routerLinkActive="router-link-active" >Home</a>
+          </li>
+          <li class="nav-item menu">
+            <a class="nav-link menu" [routerLink]="['/bookdirectory/search']" routerLinkActive="router-link-active" >Search</a>
+          </li>
+        </ul>
+      </div>
     </div>
 </nav>
